[package]
name = "rust_file_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
threadpool = "1.8.1"
unicode-segmentation = "1.11.0"
#[cfg(target_os = "windows")]
windows = {version = "0.52.0",features = ["Win32_Storage_FileSystem"]}
